[project]
name = "abs-utils"
version = "0.1.0"
description = "Shared utilities for abs_notary: async logging, exceptions, crypto, config, validators"
authors = [
    {name = "ingmarAvocado"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.12.4,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "python-json-logger (>=4.0.0,<5.0.0)",
    "starlette (>=0.50.0,<0.51.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2,<9"
pytest-asyncio = "^1.2.0"
black = "^25.9.0"
ruff = "^0.14.4"
mypy = "^1.18.2"
pytest-cov = "^7.0.0"
coverage = "^7.11.2"
httpx = "^0.28.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=abs_utils",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=90"
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.coverage.run]
source = ["abs_utils"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
]

